fix: fix text align hook

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -107,7 +107,7 @@ body {
 }
 
 .widget__header h3 {
-    text-align: center;
+    text-align: center !important;
     font-size: 1.8rem;
     color: var(--secondary);
     padding-bottom: 10px;
@@ -139,7 +139,6 @@ body {
     border-radius: 10px;
 
     transition-duration: 300ms;
-    text-align: center;
     font-size: 20px;
 
     &:hover {
@@ -157,6 +156,9 @@ body {
         color: var(--base-content);
         & svg {
             fill: var(--base-content);
+        }
+        & > .widget__item-text {
+            text-align: center !important;
         }
     }
 
